2009-08-05  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor fix for C++ implementation.

	* tools/include/svp/testoutput.h: Properly cast in C++ version of
	`output_bytes'.

2009-08-05  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	C-ize sources in 'lib/'. Minor interface updates.
	
	* lib/src/div.sl,
	* lib/src/io.sl,
	* lib/src/roman.sl: Rename to...
	
	* lib/src/div.c,
	* lib/src/io.c,	
	* lib/src/roman.c: ... here. Use CPP syntax where appropriate.

	* lib/mtalpha.mk,
	* lib/seqc.mk,
	* lib/ptl.mk: Update accordingly.
	
	* lib/include/cstdint.h: Do not try to include `<cstdint>' in C++
	mode since it is not (yet) defined in ISO C++. Be optimistic and
	assume `<stdint.h>' is always available.

	* lib/include/svp/io.h,	
	* lib/include/svp/iomacros.h,	
	* lib/src/io.c: Use `long' instead of `long long', since `long' is
	the canonical largest integer type that fits in a register and we
	don't support multi-register types yet.

	* tools/include/svp/testoutput.h: Use `likely' and `unlikely'
	where appropriate.
	
2009-08-05  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Kill extension .slh in 'lib/'.
	
	* lib/include/svp/roman.slh, 
	* lib/include/svp/perf.slh, 
	* lib/include/svp/assert.slh, 
	* lib/include/svp/div.slh, 
	* lib/include/svp/io.slh, 
	* lib/include/svp/iomacros.slh, 
	* lib/include/sac_helpers.slh, 
	* lib/include/cstdint.slh, 
	* lib/include/cstddef.slh, 
	* lib/include/cmalloc.slh, 
	* lib/include/cstdbool.slh, 
	* lib/include/climits.slh: Rename to...

	* lib/include/svp/roman.h, 
	* lib/include/svp/perf.h, 
	* lib/include/svp/assert.h, 
	* lib/include/svp/div.h, 
	* lib/include/svp/io.h, 
	* lib/include/svp/iomacros.h, 
	* lib/include/sac_helpers.h, 
	* lib/include/cstdint.h, 
	* lib/include/cstddef.h, 
	* lib/include/cmalloc.h, 
	* lib/include/cstdbool.h, 
	* lib/include/climits.h: ... here. Use CPP syntax where
	applicable.

2009-08-04  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Get rid of extension .sl in `tools/'.
	
	* tools/tests/0_trivial/emptymain.sl,